--- a/replay.ipynb
+++ b/replay.ipynb
@@ -2,80 +2,96 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 BNBUSDT files\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-9197ff6e275f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreplay\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdates\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'BNBUSDT'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"BNBUSDT files\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mfile_0\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mreplay\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdates\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'BNBUSDT'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'sample from '\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfile_0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreplay\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msample\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile_0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from deep_orderbook import replay\n",
-    "\n",
-    "MARKETS = [\"ETHBTC\", \"BTCUSDT\", \"ETHUSDT\", \"BNBBTC\", \"BNBETH\", \"BNBUSDT\"]\n",
-    "\n",
-    "len(replay.snapshots('BNBUSDT'))\n",
-    "\n",
-    "print(len(replay.updates('BNBUSDT')), \"BNBUSDT files\")\n",
-    "file_0 = replay.updates('BNBUSDT')[0]\n",
-    "print('sample from ', file_0, replay.sample(file_0))\n",
-    "\n",
-    "print(len(replay.trades_file('BNBUSDT')), \"files\")\n",
-    "alltrdf = replay.tradesframe(replay.trades_file('BNBUSDT')[2]).tail()\n",
-    "print('alltrdf', alltrdf)\n",
-    "\n",
-    "b, a, p = replay.buildL2(replay.snapshots('BNBUSDT')[0])\n",
-    "print(b.shape, a.shape, p)\n",
-    "\n",
-    "replayer = replay.replayL2('ETHBTC')\n",
-    "b, a, tp, tr = next(replayer)\n",
-    "print('tp', tp)\n",
-    "print('tr', tr)\n",
-    "\n",
-    "\n",
-    "for i in range(2700):\n",
-    "    b, a, tp, tr = next(replayer)\n",
-    "    if len(tr) > 5:\n",
-    "        break\n",
-    "print('tp', tp)\n",
-    "print('tr', tr)\n",
-    "\n",
-    "\n",
-    "print('min diff price ask:', a.reset_index()['price'].diff().min())\n",
-    "print('bid', b.head())\n",
-    "print('ask', a.head())\n",
-    "\n",
-    "bined_b, bined_a, treind_b, treind_a = replay.bin_books(b, a, tr, ref_price=tp['price'])\n",
-    "\n",
-    "\n",
-    "genacc = replay.accumulate_array(['ETHBTC'])\n",
-    "\n",
-    "\n",
-    "sa = next(genacc)\n",
-    "print('shapes\\n', {k: {k2: [ai.shape for ai in a] for k2,a in ars.items()} for k,ars in sa.items()})\n",
-    "\n",
-    "for n,x in enumerate(genacc):\n",
-    "    pass\n",
-    "\n",
-    "for m in MARKETS[:3]:\n",
-    "    arrays = replay.sampleArrays(m)\n",
-    "    replay.sampleImages(**arrays)"
+    "import numpy as np\n",
+    "from pylab import rcParams"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "from IPython.display import clear_output\n",
+    "rcParams['figure.figsize'] = 20, 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_replayer = replay.Replayer('../OLDcrypto-trading/data/L2')\n",
+    "replayer = file_replayer.replayL2('ETHBTC')\n",
+    "b, a, tp, tr = next(replayer)\n",
+    "\n",
+    "print(f\"bids:\\n{b.head()}\")\n",
+    "print(f\"asks:\\n{a.head()}\")\n",
+    "print(f\"prices:\\n{tp}\")\n",
+    "print(f\"trades:\\n{tr}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b, a, tp, tr = next(replayer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gen = file_replayer.accumulate_array(markets=['ETHBTC','BTCUSDT'])\n",
+    "next(gen)\n",
+    "LENGTH = 128\n",
+    "x = []\n",
+    "for n,sec in enumerate(gen):\n",
+    "    allim = []\n",
+    "    for symb, data in sec.items():\n",
+    "        arr = np.stack(data['bs'][-LENGTH:])\n",
+    "        im = arr\n",
+    "        im[:,:,0] /= 10\n",
+    "        im += 0.5\n",
+    "        allim.append(im)\n",
+    "    allim = np.concatenate(allim, axis=1)\n",
+    "    if n % 1 == 0:\n",
+    "        plt.figure(figsize=(15,11))\n",
+    "        toshow = allim.transpose(1,0,2)\n",
+    "        toshow = np.clip(toshow, 0, 1)\n",
+    "        plt.imshow(toshow, origin=\"lower\");\n",
+    "        clear_output(wait=True)\n",
+    "        plt.show()\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "genacc = file_replayer.accumulate_array(markets=['ETHBTC'])\n",
+    "next(genacc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -94,9 +110,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
