--- a/replay.ipynb
+++ b/replay.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from deep_orderbook import replay\n",
+    "from deep_orderbook import replayer\n",
     "import numpy as np\n",
     "from pylab import rcParams"
    ]
@@ -28,9 +28,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_replayer = replay.Replayer('../OLDcrypto-trading/data/L2')\n",
-    "replayer = file_replayer.replayL2('ETHBTC')\n",
-    "b, a, tp, tr = next(replayer)\n",
+    "file_replayer = replayer.Replayer('../crypto-trading/data/L2')\n",
+    "replay = file_replayer.replayL2('ETHBTC')\n",
+    "b, a, tp, tr = next(replay)\n",
     "\n",
     "print(f\"bids:\\n{b.head()}\")\n",
     "print(f\"asks:\\n{a.head()}\")\n",
@@ -44,7 +44,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "b, a, tp, tr = next(replayer)"
+    "gen = file_replayer.accumulate_array(markets=['ETHBTC','BTCUSDT'])\n",
+    "_ = next(gen)"
    ]
   },
   {
@@ -53,8 +54,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gen = file_replayer.accumulate_array(markets=['ETHBTC','BTCUSDT'])\n",
-    "next(gen)\n",
     "LENGTH = 128\n",
     "x = []\n",
     "for n,sec in enumerate(gen):\n",
@@ -92,6 +91,146 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -110,7 +249,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
