receiving trades per book updates

--- a/receive.ipynb
+++ b/receive.ipynb
@@ -7,7 +7,8 @@
    "outputs": [],
    "source": [
     "import deep_orderbook as dob\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
@@ -16,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "receiver = await dob.recorder.Receiver.create(['ETHBTC'])"
+    "receiver = await dob.recorder.Receiver.create(markets=['ETHBTC'])"
    ]
   },
   {
@@ -25,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "receiver2 = await dob.recorder.Receiver.create(['BNBBTC'])"
+    "#receiver2 = await dob.recorder.Writer.create(markets=['BNBBTC'], data_folder='data')"
    ]
   },
   {
@@ -35,7 +36,7 @@
    "outputs": [],
    "source": [
     "b = receiver.depth_managers['ETHBTC'].get_depth_cache().get_bids()\n",
-    "pd.DataFrame(b)"
+    "pd.DataFrame(b, columns=['price', 'size']).astype(np.float64).set_index('price')#.cumsum().plot()"
    ]
   },
   {
@@ -43,7 +44,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "receiver.depth_managers['ETHBTC'].trades"
+   ]
   },
   {
    "cell_type": "code",
