fully async notebook that shows rolling image of books

--- a/replay.ipynb
+++ b/replay.ipynb
@@ -30,7 +30,7 @@
    "outputs": [],
    "source": [
     "shapper = await BookShapper.create()\n",
-    "file_replayer = Replayer('../crypto-trading/data/L2')\n",
+    "file_replayer = Replayer('../crypto-trading/data/L2', date_regexp='2020-01-26T04')\n",
     "replay = file_replayer.replayL2('ETHBTC', shapper)\n",
     "b, a, tp, tr = next(replay)"
    ]
@@ -57,7 +57,7 @@
    "outputs": [],
    "source": [
     "shapper = await BookShapper.create()\n",
-    "file_replayer = Replayer('../crypto-trading/data/L2')\n",
+    "file_replayer = Replayer('../crypto-trading/data/L2', date_regexp='2020-01-26T04')\n",
     "areplay = file_replayer.replayL2_async('ETHBTC', shapper)\n",
     "b, a, tp, tr = await areplay.__anext__()"
    ]
@@ -96,11 +96,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "replayers = [file_replayer.replayL2('ETHBTC', await BookShapper.create()),\n",
-    "             file_replayer.replayL2('BTCUSDT', await BookShapper.create()),\n",
+    "replayers = [file_replayer.replayL2_async('ETHBTC', await BookShapper.create()),\n",
+    "             file_replayer.replayL2_async('BTCUSDT', await BookShapper.create()),\n",
     "            ]\n",
-    "multi_replay = file_replayer.multireplayL2(replayers)\n",
-    "d = next(multi_replay)"
+    "multi_replay = file_replayer.multireplayL2_async(replayers)\n",
+    "d = await multi_replay.__anext__()"
    ]
   },
   {
@@ -109,9 +109,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(100):\n",
-    "    d = next(multi_replay)\n",
-    "d"
+    "i = 0\n",
+    "async for d in multi_replay:\n",
+    "    if i > 100:\n",
+    "        break\n",
+    "    i += 1\n",
+    "#d"
    ]
   },
   {
@@ -120,8 +123,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gen = file_replayer.accumulate_array(markets=['ETHBTC','BTCUSDT'])\n",
-    "_ = next(gen)"
+    "genarr = shapper.gen_array(market_replay=multi_replay, markets=['ETHBTC','BTCUSDT'])\n",
+    "_ = await genarr.__anext__()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "genacc = shapper.accumulate_array(genarr, markets=['ETHBTC','BTCUSDT'])\n",
+    "_ = await genacc.__anext__()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from aioitertools import enumerate\n",
+    "every = 10"
    ]
   },
   {
@@ -132,7 +155,7 @@
    "source": [
     "LENGTH = 128\n",
     "x = []\n",
-    "for n,sec in enumerate(gen):\n",
+    "async for n,sec in enumerate(genacc):\n",
     "    allim = []\n",
     "    for symb, data in sec.items():\n",
     "        arr = np.stack(data['bs'][-LENGTH:])\n",
@@ -141,7 +164,7 @@
     "        im += 0.5\n",
     "        allim.append(im)\n",
     "    allim = np.concatenate(allim, axis=1)\n",
-    "    if n % 1 == 0:\n",
+    "    if n % every == 0:\n",
     "        plt.figure(figsize=(15,11))\n",
     "        toshow = allim.transpose(1,0,2)\n",
     "        toshow = np.clip(toshow, 0, 1)\n",
@@ -201,8 +224,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
