--- a/replay_async.ipynb
+++ b/replay_async.ipynb
@@ -29,9 +29,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import itertools\n",
-    "\n",
-    "\n"
+    "# itertools for asyncio !\n",
+    "import asyncio\n",
+    "from aioitertools import iter, next, map, zip\n",
+    "from aioitertools import enumerate"
    ]
   },
   {
@@ -42,8 +43,8 @@
    "source": [
     "shapper = await BookShapper.create()\n",
     "file_replayer = Replayer('../crypto-trading/data/L2', date_regexp='2020-01-26T04')\n",
-    "areplay = file_replayer.replayL2('ETHBTC', shapper)\n",
-    "b, a, tp, tr = next(areplay)"
+    "areplay = file_replayer.replayL2_async('ETHBTC', shapper)\n",
+    "b, a, tp, tr = await next(areplay)"
    ]
   },
   {
@@ -53,7 +54,7 @@
    "outputs": [],
    "source": [
     "for i in range(100):\n",
-    "    b, a, tp, tr = next(areplay)\n",
+    "    b, a, tp, tr = await next(areplay)\n",
     "print(f\"bids:\\n{b.head()}\")\n",
     "print(f\"asks:\\n{a.head()}\")\n",
     "print(f\"prices:\\n{tp}\")\n",
@@ -66,11 +67,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "replayers = [file_replayer.replayL2('ETHBTC', await BookShapper.create()),\n",
-    "             file_replayer.replayL2('BTCUSDT', await BookShapper.create()),\n",
+    "replayers = [file_replayer.replayL2_async('ETHBTC', await BookShapper.create()),\n",
+    "             file_replayer.replayL2_async('BTCUSDT', await BookShapper.create()),\n",
     "            ]\n",
-    "multi_replay = file_replayer.multireplayL2(replayers)\n",
-    "d = next(multi_replay)"
+    "multi_replay = file_replayer.multireplayL2_async(replayers)\n",
+    "d = await next(multi_replay)"
    ]
   },
   {
@@ -79,11 +80,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def run(maxpoints=1000):\n",
-    "    for i in iter(range(maxpoints)):\n",
-    "        d = next(multi_replay)\n",
+    "async def run(maxpoints=100):\n",
+    "    async for i in iter(range(maxpoints)):\n",
+    "        d = await next(multi_replay)\n",
     "    #return d\n",
-    "\n"
+    "\n",
+    "task = asyncio.create_task(run())"
    ]
   },
   {
@@ -92,7 +94,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run()"
+    "await task"
    ]
   },
   {
@@ -101,8 +103,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "genarr = shapper.gen_array(market_replay=multi_replay, markets=['ETHBTC','BTCUSDT'])\n",
-    "_ = next(genarr)"
+    "genarr = shapper.gen_array_async(market_replay=multi_replay, markets=['ETHBTC','BTCUSDT'])\n",
+    "_ = await next(genarr)"
    ]
   },
   {
@@ -111,8 +113,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "genacc = itertools.accumulate(genarr, BookShapper.build)\n",
-    "_ = next(genacc)"
+    "genacc = shapper.accumulate_array(genarr, markets=['ETHBTC','BTCUSDT'])\n",
+    "_ = await next(genacc)"
    ]
   },
   {
@@ -132,7 +134,7 @@
    "source": [
     "LENGTH = 128\n",
     "x = []\n",
-    "for n,sec in enumerate(genacc):\n",
+    "async for n,sec in enumerate(genacc):\n",
     "    allim = []\n",
     "    for symb, data in sec.items():\n",
     "        arr = np.stack(data['bs'][-LENGTH:])\n",
@@ -150,6 +152,20 @@
     "        plt.show()\n",
     "    pass"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
