--- a/receive.ipynb
+++ b/receive.ipynb
@@ -6,7 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import deep_orderbook as dob\n",
+    "from deep_orderbook.recorder import Receiver\n",
+    "from deep_orderbook.shapper import BookShapper\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np"
    ]
@@ -17,7 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "receiver = await dob.recorder.Receiver.create(markets=['ETHBTC'])"
+    "receiver = await Receiver.create(markets=['ETHBTC'])"
    ]
   },
   {
@@ -53,7 +55,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "shapper = await BookShapper.create()\n",
+    "multi_replay = receiver.multi_generator(shapper)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "await multi_replay.__anext__()"
+   ]
   },
   {
    "cell_type": "code",
@@ -113,7 +127,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
