notebook receiver plotting live book images

--- a/replay_async.ipynb
+++ b/replay_async.ipynb
@@ -123,15 +123,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "every = 10"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "every = 10\n",
     "LENGTH = 128\n",
     "x = []\n",
     "async for n,sec in enumerate(genacc):\n",
