--- a/receive.ipynb
+++ b/receive.ipynb
@@ -10,7 +10,8 @@
     "from deep_orderbook.shapper import BookShapper\n",
     "\n",
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from pylab import rcParams"
    ]
   },
   {
@@ -19,7 +20,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "receiver = await Receiver.create(markets=['ETHBTC'])"
+    "import matplotlib.pyplot as plt\n",
+    "from IPython.display import clear_output\n",
+    "rcParams['figure.figsize'] = 20, 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "receiver = await Receiver.create(markets=['ETHBTC', 'BTCUSDT'])"
    ]
   },
   {
@@ -56,8 +68,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "shapper = await BookShapper.create()\n",
-    "multi_replay = receiver.multi_generator(shapper)"
+    "shappers = {'ETHBTC': await BookShapper.create(),\n",
+    "            'BTCUSDT': await BookShapper.create(),\n",
+    "           }\n",
+    "multi_replay = receiver.multi_generator(shappers)"
    ]
   },
   {
@@ -66,7 +80,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "await multi_replay.__anext__()"
+    "_ = await multi_replay.__anext__()"
    ]
   },
   {
@@ -75,7 +89,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir(dob)"
+    "import aioitertools\n",
+    "genarr = BookShapper.gen_array_async(market_replay=multi_replay, markets=['ETHBTC', 'BTCUSDT'])\n",
+    "_ = await aioitertools.next(genarr)"
    ]
   },
   {
@@ -84,7 +100,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir(dob.recorder.Receiver)"
+    "genacc = BookShapper.accumulate_array(genarr, markets=['ETHBTC', 'BTCUSDT'])\n",
+    "_ = await aioitertools.next(genacc)"
    ]
   },
   {
@@ -93,7 +110,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "receiver"
+    "every = 1\n",
+    "LENGTH = 128\n",
+    "x = []\n",
+    "async for n,sec in aioitertools.enumerate(genacc):\n",
+    "    allim = []\n",
+    "    for symb, data in sec.items():\n",
+    "        arr = np.stack(data['bs'][-LENGTH:])\n",
+    "        im = arr\n",
+    "        im[:,:,0] /= 10\n",
+    "        im += 0.5\n",
+    "        allim.append(im)\n",
+    "    allim = np.concatenate(allim, axis=1)\n",
+    "    if n % every == 0:\n",
+    "        plt.figure(figsize=(15,11))\n",
+    "        toshow = allim.transpose(1,0,2)\n",
+    "        toshow = np.clip(toshow, 0, 1)\n",
+    "        plt.imshow(toshow, origin=\"lower\");\n",
+    "        clear_output(wait=True)\n",
+    "        plt.show()\n",
+    "    pass"
    ]
   },
   {
