fix book_binning for bid and ask

--- a/receive.ipynb
+++ b/receive.ipynb
@@ -59,6 +59,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "a = receiver.depth_managers['ETHBTC'].get_depth_cache().get_asks()\n",
+    "pd.DataFrame(a, columns=['price', 'size']).astype(np.float64).set_index('price')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "receiver.depth_managers['ETHBTC'].trades"
    ]
   },
@@ -163,7 +173,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
